<resources>
    <string name="app_name">Food App</string>

    <string name="text_home">首頁</string>
    <string name="text_favorites">最愛</string>
    <string name="text_categories">類別</string>
    <string name="text_area">地區</string>
    <string name="text_recipe">食譜</string>
    <string name="text_cancel">取消</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="what_would_you_like_to_eat">你想吃什麼？</string>
    <string name="over_popular_items">熱門的項目</string>

    <string name="hint_already_add_favorite">已加入到最愛</string>
    <string name="hint_you_can_not_undo">你無法返回這這個步驟！</string>
    <string name="hint_delete_this_item">刪除這個項目?</string>
    <string name="hint_add_favorite">添加至最愛</string>
    <string name="hint_go_detail">前往詳細頁面</string>
    <string name="hint_random_meal">隨機推薦</string>
    <string name="hint_search_food">搜尋食物...</string>
    <string name="hint_screen_rotation">畫面旋轉</string>
</resources>