<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_header"
        style="@style/CustomCardTopCorners"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_bottom_prompt_top"
            android:fontFamily="@font/ubuntu_bold"
            android:gravity="center"
            android:padding="@dimen/_8sdp"
            android:text="@string/app_name"
            android:textColor="@color/accent"
            android:textSize="@dimen/_14ssp" />

    </com.google.android.material.card.MaterialCardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_header">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_img_meal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:elevation="@dimen/_3sdp"
            app:cardBackgroundColor="@color/yellow"
            app:cardCornerRadius="@dimen/_10ssp"
            app:cardUseCompatPadding="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_meal"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_70sdp"
                android:scaleType="fitCenter" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_placeholder"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_70sdp"
                android:padding="@dimen/_10sdp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_baseline_image_search_24"
                android:tint="@color/accent" />

        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_meal_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:fontFamily="@font/ubuntu_medium"
            android:includeFontPadding="false"
            android:paddingTop="@dimen/_5sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/card_img_meal"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="某食物" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/supportLine"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/support"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_body" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layout_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/supportLine"
        tools:visibility="visible">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_baseline_category_24"
            android:drawableTint="@color/accent"
            android:fontFamily="@font/ubuntu_medium"
            android:gravity="center|start"
            android:text="@string/text_categories"
            android:textSize="@dimen/_10ssp"
            android:textStyle="bold"
            tools:text="類別：Beef" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_baseline_location_on_24"
            android:drawableTint="@color/accent"
            android:fontFamily="@font/ubuntu_medium"
            android:gravity="center|start"
            android:text="@string/text_area"
            android:textSize="@dimen/_10ssp"
            android:textStyle="bold"
            tools:text="地區：Taiwan" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_tool"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingBottom="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_go_detail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:text="@string/hint_go_detail"
            app:cornerRadius="@dimen/_5sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>