<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.MealActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        android:background="@color/g_black">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:collapsedTitleTextColor="@color/white"
            app:contentScrim="@color/accent"
            app:expandedTitleTextColor="@color/white"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:title="名稱">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_meal_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:layout_collapseMode="pin" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/pb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_10sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_baseline_favorite_border_24"
        app:backgroundTint="@color/accent"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|end"
        app:tint="@color/white" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/layout_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/ic_baseline_category_24"
                    android:drawableTint="@color/g_black"
                    android:fontFamily="@font/ubuntu_medium"
                    android:text="@string/text_categories"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold"
                    tools:text="類別：Beef" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_area"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/ic_baseline_location_on_24"
                    android:drawableTint="@color/g_black"
                    android:fontFamily="@font/ubuntu_medium"
                    android:text="@string/text_area"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold"
                    tools:text="地區：Taiwan" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_recipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/ubuntu_regular"
                android:text="@string/text_recipe"
                android:textColor="@color/g_black"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_content"
                tools:text="- 食譜：" />

            <com.side.project.foodapp.utils.customView.AlignTextView
                android:id="@+id/tv_recipe_step"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:fontFamily="@font/ubuntu_regular"
                android:gravity="start"
                android:paddingBottom="@dimen/_10sdp"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_recipe" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_movable"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?actionBarSize">

        <View
            android:id="@+id/view_tool"
            android:layout_width="@dimen/_3sdp"
            android:layout_height="0dp"
            android:background="@color/accent"
            android:backgroundTint="@color/accent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/fab_tool_video"
            app:layout_constraintBottom_toBottomOf="@id/fab_tool_web"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_tool_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="@dimen/_10sdp"
            android:clickable="true"
            android:contentDescription="@string/app_name"
            android:focusable="true"
            android:src="@drawable/ic_baseline_video_library_24"
            android:visibility="invisible"
            app:backgroundTint="@color/white"
            app:layout_constraintBottom_toTopOf="@id/fab_tool_web"
            app:layout_constraintEnd_toEndOf="@id/fab_tool"
            app:tint="@color/accent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_tool_web"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="@dimen/_10sdp"
            android:clickable="true"
            android:contentDescription="@string/app_name"
            android:focusable="true"
            android:src="@drawable/ic_baseline_public_24"
            android:visibility="invisible"
            app:backgroundTint="@color/white"
            app:layout_constraintBottom_toTopOf="@id/fab_tool"
            app:layout_constraintEnd_toEndOf="@id/fab_tool"
            app:tint="@color/accent" />

        <com.side.project.foodapp.utils.customView.MovableFloatingActionButton
            android:id="@+id/fab_tool"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:clickable="true"
            android:contentDescription="@string/app_name"
            android:focusable="true"
            android:src="@drawable/ic_baseline_menu_book_24"
            app:backgroundTint="@color/accent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>